# NemaTode

./: .travis.yml  CMakeLists.txt  README.md
cmake/: nematode-config.cmake
include/nmeaparse/: Event.h  GPSFix.h  GPSService.h  NMEACommand.h  NMEAParser.h  NumberConversion.h
src/: GPSFix.cpp  GPSService.cpp  NMEACommand.cpp  NMEAParser.cpp
